# CarOS

./: .gitignore  Cargo.toml  README.md
dash/: Cargo.toml
dash/src/: app.rs  lib.rs  main.rs
dash/src/app/: mod.rs
dash/src/app/widget/: circular_timer.rs  mod.rs  progress_circle.rs
dash/src/app/widget/shape/: circle.rs
dash/src/service/: mod.rs  timer.rs  timer2.rs
dash/src/widget/: mod.rs  progress_circle.rs  timer.rs
dash/src/widget/shape/: circle.rs  mod.rs
launcher/: Cargo.toml  temp.html
launcher/src/: app.rs  headlines.rs  integration.rs  lib.rs  main.rs
launcher/src/app/: mod.rs
navigation/: Cargo.toml
navigation/src/: app.rs  lib.rs  main.rs
navigation/src/app/: mod.rs
