[package]
name = "launcher"
version = "0.1.0"
authors = [
    "Chris Kruining <chris@kruining.eu>"
]
edition = "2021"

[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence"
] }
log = "0.4"
serde = { version = "1", features = [ "derive" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"