[package]
name = "launcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
egui.workspace = true
eframe.workspace = true
log.workspace = true
serde.workspace = true
#smithay.workspace = true
#smithay-egui.workspace = true
anyhow = "1.0"
tracing-subscriber = "0.3"
dash = { path = "../dash" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true